--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<input type="button" onclick="location.href='song'" 
+<input type="button" onclick="location.href='song.zip'" 
 value="Shotta Flow 6">
-
-<input type="button" onclick="location.href='weenie'" 
+<br>
+<input type="button" onclick="location.href='weenie.zip'" 
 value="Big Weenie">
  
  
