--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <body>
 
+<style>
+p.ex2 {
+  font-size: 50px;
+}
+</style>
+
+<p class="ex2">Beatsaber Songs</p>
+ 
 <input type="button" onclick="location.href='song.zip'" 
 value="Shotta Flow 6">
 <br>
