--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p.ex2 {
 </style>
 
 <p class="ex2">Beatsaber Songs</p>
- 
+button class="button" role="button"
 <input type="button" onclick="location.href='song.zip'" 
 value="Shotta Flow 6">
 <br>
