--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ value="Shotta Flow 6">
 <br>
 <input type="button" onclick="location.href='weenie.zip'" 
 value="Big Weenie">
- 
+<br>
+<br>
+<input type="button" onclick="location.href='whoopty.zip'" 
+value="Whoopty">
+
  
 </body>
 </html>
